--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Портфолио Виктора Тяна | AI Контент</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9fafb;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(90deg, #0078d7, #00b4d8);
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      margin-top: 0;
+    }
+    .gallery img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      color: #555;
+    }
+    a {
+      color: #0078d7;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Виктор Тян — AI Контент Креатор</h1>
+    <p>Создаю тексты, изображения и идеи с помощью искусственного интеллекта</p>
+  </header>
 
+  <main>
+    <section>
+      <h2>Обо мне</h2>
+      <p>Я начинающий специалист в области генерации контента с использованием искусственного интеллекта. Создаю визуальные работы, тексты и сценарии для проектов и соцсетей.</p>
+    </section>
+
+    <section>
+      <h2>Примеры работ</h2>
+      <div class="gallery">
+        <img src="https://via.placeholder.com/800x400?text=AI+Artwork+1" alt="AI Art 1">
+        <img src="https://via.placeholder.com/800x400?text=AI+Artwork+2" alt="AI Art 2">
+        <img src="https://via.placeholder.com/800x400?text=AI+Artwork+3" alt="AI Art 3">
+      </div>
+    </section>
+
+    <section>
+      <h2>Контакты</h2>
+      <p>Fiverr: <a href="https://www.fiverr.com/viktor_tyan/buying?source=avatar_menu_profile" target="_blank">Профиль на Fiverr</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Виктор Тян. Все права защищены.</p>
+  </footer>
+</body>
+</html>
