--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
     </section>
 
     <section>
-      <h2>Примеры работ</h2>
-      <div class="gallery">
-        <img src="https://via.placeholder.com/800x400?text=AI+Artwork+1" alt="AI Art 1">
-        <img src="https://via.placeholder.com/800x400?text=AI+Artwork+2" alt="AI Art 2">
-        <img src="https://via.placeholder.com/800x400?text=AI+Artwork+3" alt="AI Art 3">
-      </div>
-    </section>
+  <h2>Примеры работ</h2>
+  <ul>
+    <li><a href="works/How_AI_Changes_Content_Creation.pdf" target="_blank">How AI Changes Content Creation</a></li>
+    <li><a href="works/The_Future_of_SEO_Writing.pdf" target="_blank">The Future of SEO Writing</a></li>
+    <li><a href="works/Balancing_Creativity_and_Automation.pdf" target="_blank">Balancing Creativity and Automation</a></li>
+  </ul>
+</section>
+
 
     <section>
       <h2>Контакты</h2>
